fix alignment on panels and add columsn to separate bottom

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,17 +104,23 @@ a:active {
   color: $gt-color2;
 }
 
+
+
+
 //
 // Skip Test
 // --------------------------------------------------
-
 
 .panel {
   .panel-footer, .panel-body, .panel-heading  {
     padding-bottom: 5px;
     padding-top: 5px;
   }
-  .panel-body, .panel-heading {
-    padding-top: 10px;
+  .panel-heading {
+    padding-top: 15px;
   }
+}
+
+.item-col {
+  padding-left: 0px;
 }
